feat/adding-new-changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,12 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta name="google" content="notranslate" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.png" />
+    <meta
+      name="description"
+      content="Portfolio of Mateo Jiménez, Full Stack Developer specialized in building modern and scalable web applications. Contact: me@soyteo.co."
+    />
+    <meta name="author" content="Mateo Jimenez" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mateo Jimenez</title>
     <meta name="theme-color" content="#F4ECE1" />
