feat/adding-state-indicator

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,16 @@
       name="description"
       content="Portfolio of Mateo Jiménez, Full Stack Developer specialized in building modern and scalable web applications. Contact: me@soyteo.co."
     />
-    <meta name="author" content="Mateo Jimenez" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Mateo Jimenez (SirRiuz)" />
+    <meta property="og:title" content="Mateo Jiménez – Full Stack Developer" />
+    <meta
+      property="og:description"
+      content="Portfolio of Mateo Jiménez, Full Stack Developer specialized in modern web apps."
+    />
+    <meta property="og:image" content="https://soyteo.co/icon.png" />
+    <meta property="og:url" content="https://soyteo.co" />
+    <meta property="og:type" content="website" />
     <title>Mateo Jimenez</title>
     <meta name="theme-color" content="#F4ECE1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
